@@ -1,16 +1,19 @@
 package net.momirealms.craftengine.bukkit.plugin.network.handler;
 
+import com.google.common.collect.ImmutableList;
 import net.kyori.adventure.text.Component;
 import net.momirealms.craftengine.bukkit.entity.data.BaseEntityData;
-import net.momirealms.craftengine.bukkit.entity.data.ItemEntityData;
+import net.momirealms.craftengine.bukkit.entity.data.item.ItemEntityData;
 import net.momirealms.craftengine.bukkit.item.BukkitItemManager;
-import net.momirealms.craftengine.bukkit.nms.FastNMS;
 import net.momirealms.craftengine.bukkit.util.ComponentUtils;
+import net.momirealms.craftengine.bukkit.util.EntityUtils;
+import net.momirealms.craftengine.bukkit.util.ItemStackUtils;
+import net.momirealms.craftengine.bukkit.util.PacketUtils;
 import net.momirealms.craftengine.bukkit.world.score.BukkitTeamManager;
 import net.momirealms.craftengine.core.entity.player.Player;
-import net.momirealms.craftengine.core.item.CustomItem;
 import net.momirealms.craftengine.core.item.Item;
-import net.momirealms.craftengine.core.item.ItemSettings;
+import net.momirealms.craftengine.core.item.ItemDefinition;
+import net.momirealms.craftengine.core.item.setting.ItemSettings;
 import net.momirealms.craftengine.core.plugin.config.Config;
 import net.momirealms.craftengine.core.plugin.context.ContextHolder;
 import net.momirealms.craftengine.core.plugin.context.NetworkTextReplaceContext;
@@ -19,16 +22,20 @@ import net.momirealms.craftengine.core.plugin.context.parameter.DirectContextPar
 import net.momirealms.craftengine.core.plugin.network.EntityPacketHandler;
 import net.momirealms.craftengine.core.plugin.network.event.ByteBufPacketEvent;
 import net.momirealms.craftengine.core.plugin.text.minimessage.CustomTagResolver;
-import net.momirealms.craftengine.core.util.AdventureHelper;
-import net.momirealms.craftengine.core.util.ArrayUtils;
-import net.momirealms.craftengine.core.util.FriendlyByteBuf;
-import net.momirealms.craftengine.core.util.LegacyChatFormatter;
+import net.momirealms.craftengine.core.util.*;
+import net.momirealms.craftengine.proxy.bukkit.craftbukkit.inventory.CraftItemStackProxy;
+import net.momirealms.craftengine.proxy.minecraft.network.protocol.game.ClientboundSetPlayerTeamPacketProxy;
+import net.momirealms.craftengine.proxy.minecraft.network.syncher.SynchedEntityDataProxy;
+import net.momirealms.craftengine.proxy.minecraft.server.level.ServerLevelProxy;
+import net.momirealms.craftengine.proxy.minecraft.world.entity.EntityProxy;
+import net.momirealms.craftengine.proxy.minecraft.world.level.LevelProxy;
+import net.momirealms.craftengine.proxy.paper.chunk.system.entity.EntityLookupProxy;
 import org.bukkit.inventory.ItemStack;
 
 import java.util.List;
 import java.util.Optional;
 
-public class ItemPacketHandler implements EntityPacketHandler {
+public final class ItemPacketHandler implements EntityPacketHandler {
     public static final ItemPacketHandler INSTANCE = new ItemPacketHandler();
 
     @Override
@@ -37,29 +44,28 @@ public class ItemPacketHandler implements EntityPacketHandler {
         FriendlyByteBuf buf = event.getBuffer();
         int id = buf.readVarInt();
         boolean changed = false;
-        List<Object> packedItems = FastNMS.INSTANCE.method$ClientboundSetEntityDataPacket$unpack(buf);
+        List<Object> packedItems = PacketUtils.clientboundSetEntityDataPacket$unpack(buf);
         Component nameToShow = null;
         LegacyChatFormatter glowColor = null;
         for (int i = 0; i < packedItems.size(); i++) {
             Object packedItem = packedItems.get(i);
-            int entityDataId = FastNMS.INSTANCE.field$SynchedEntityData$DataValue$id(packedItem);
+            int entityDataId = SynchedEntityDataProxy.DataValueProxy.INSTANCE.getId(packedItem);
             if (entityDataId == ItemEntityData.Item.id()) {
-                Object nmsItemStack = FastNMS.INSTANCE.field$SynchedEntityData$DataValue$value(packedItem);
-                ItemStack itemStack = FastNMS.INSTANCE.method$CraftItemStack$asCraftMirror(nmsItemStack);
+                Object nmsItemStack = EntityUtils.getEntityDataValue(packedItem, ItemEntityData.Item);
+                ItemStack itemStack = ItemStackUtils.getBukkitStack(nmsItemStack);
 
                 // 转换为客户端侧物品
                 Optional<ItemStack> optional = BukkitItemManager.instance().s2c(itemStack, user);
                 if (optional.isPresent()) {
                     changed = true;
                     itemStack = optional.get();
-                    Object serializer = FastNMS.INSTANCE.field$SynchedEntityData$DataValue$serializer(packedItem);
-                    packedItems.set(i, FastNMS.INSTANCE.constructor$SynchedEntityData$DataValue(entityDataId, serializer, FastNMS.INSTANCE.method$CraftItemStack$asNMSCopy(itemStack)));
+                    SynchedEntityDataProxy.DataValueProxy.INSTANCE.setValue(packedItem, CraftItemStackProxy.INSTANCE.asNMSCopy(itemStack));
                 }
 
                 // 处理 drop-display 物品设置
                 // 一定要处理经历过客户端侧组件修改的物品
-                Item<ItemStack> wrappedItem = BukkitItemManager.instance().wrap(itemStack);
-                Optional<CustomItem<ItemStack>> optionalCustomItem = wrappedItem.getCustomItem();
+                Item wrappedItem = BukkitItemManager.instance().wrap(itemStack);
+                Optional<ItemDefinition> optionalCustomItem = wrappedItem.getDefinition();
                 String showName = null;
                 if (optionalCustomItem.isPresent()) {
                     ItemSettings settings = optionalCustomItem.get().settings();
@@ -96,15 +102,15 @@ public class ItemPacketHandler implements EntityPacketHandler {
             }
         }
         if (glowColor != null) {
-            Object teamByColor = BukkitTeamManager.instance().getTeamByColor(glowColor);
-            if (teamByColor != null) {
+            String teamName = BukkitTeamManager.instance().getTeamNameByColor(glowColor);
+            if (teamName != null) {
                 changed = true;
                 outer: {
                     for (int i = 0; i < packedItems.size(); i++) {
                         Object packedItem = packedItems.get(i);
-                        int entityDataId = FastNMS.INSTANCE.field$SynchedEntityData$DataValue$id(packedItem);
+                        int entityDataId = SynchedEntityDataProxy.DataValueProxy.INSTANCE.getId(packedItem);
                         if (entityDataId == BaseEntityData.SharedFlags.id()) {
-                            byte flags = (Byte) FastNMS.INSTANCE.field$SynchedEntityData$DataValue$value(packedItem);
+                            byte flags = EntityUtils.getEntityDataValue(packedItem, BaseEntityData.SharedFlags);
                             flags |= (byte) 0x40;
                             packedItems.set(i, BaseEntityData.SharedFlags.createEntityData(flags));
                             break outer;
@@ -112,10 +118,16 @@ public class ItemPacketHandler implements EntityPacketHandler {
                     }
                     packedItems.add(BaseEntityData.SharedFlags.createEntityData((byte) 0x40));
                 }
-                Object entityLookup = FastNMS.INSTANCE.method$ServerLevel$getEntityLookup(user.clientSideWorld().serverWorld());
-                Object entity = FastNMS.INSTANCE.method$EntityLookup$get(entityLookup, id);
+                Object level = user.clientSideWorld().minecraftWorld();
+                Object entityLookup;
+                if (VersionHelper.isOrAbove1_21) {
+                    entityLookup = LevelProxy.INSTANCE.moonrise$getEntityLookup(level);
+                } else {
+                    entityLookup = ServerLevelProxy.INSTANCE.getEntityLookup(level);
+                }
+                Object entity = EntityLookupProxy.INSTANCE.get(entityLookup, id);
                 if (entity != null) {
-                    user.sendPacket(FastNMS.INSTANCE.method$ClientboundSetPlayerTeamPacket$createMultiplePlayerPacket(teamByColor, List.of(FastNMS.INSTANCE.method$Entity$getUUID(entity).toString()), true), false);
+                    user.sendPacket(ClientboundSetPlayerTeamPacketProxy.INSTANCE.newInstance(teamName, 3, Optional.empty(), ImmutableList.of(EntityProxy.INSTANCE.getUUID(entity).toString())), false);
                 }
             }
         }
@@ -130,7 +142,7 @@ public class ItemPacketHandler implements EntityPacketHandler {
             buf.clear();
             buf.writeVarInt(event.packetID());
             buf.writeVarInt(id);
-            FastNMS.INSTANCE.method$ClientboundSetEntityDataPacket$pack(packedItems, buf);
+            PacketUtils.clientboundSetEntityDataPacket$pack(packedItems, buf);
         }
     }
 }
